fixes styling on small screen

--- a/src/pages/static/components/template-styles.css
+++ b/src/pages/static/components/template-styles.css
@@ -84,6 +84,9 @@
   background-color: #fcf8f4;
   width: 300px;
 }
+.LP-Template-1-table-columnContainer {
+  width: 50%;
+}
 .LP-Template-1-table-columnContainer-borderRight {
   border-right: 1px solid #000;
 }
@@ -290,16 +293,15 @@
     width: 100%;
     display: block;
   }
-  .LP-Template-1-box, .LP-Template-1-table {
+  .LP-Template-1-box {
     border: 1px solid #000;
     background-color: #fcf8f4;
     padding: 20px 25px;
     width: 100%;
     margin-bottom: 10px;
   }
-  .LP-Template-1-box, .LP-Template-1-table {
+ .LP-Template-1-table {
     background-color: #fcf8f4;
-    padding: 20px 25px;
     width: 100%;
     margin-bottom: 10px;
   }
